# autoshield-k8s

./: Makefile  README.md  pyproject.toml  requirements.txt
config/: default.yaml
data/processed/: dataset_metadata.json
data/processed/test/: X_test.npy  live_attack_stream.json  y_test.npy
data/processed/train/: X_train.npy  dataset.npz  y_train.npy
data/processed/validation/: X_val.npy  y_val.npy
deployment/: dashboard.yaml  feature-extractor.yaml  inference-service.yaml  orchestrator.yaml  test-applications.yaml
docker/: dashboard.Dockerfile  feature-extractor.Dockerfile  inference-service.Dockerfile
monitoring/grafana/dashboards/: detection.json  overview.json
monitoring/prometheus/: prometheus.yaml
notebooks/: 01-data-exploration.ipynb
src/autoshield/: aggregator.py  collector.py  feature_extractor.py  models.py  orchestrator.py
src/autoshield/actuator/: kubernetes.py  safety_controller.py
src/autoshield/api/: schemas.py  server.py
src/autoshield/dashboard/: api.py
src/autoshield/detector/: inference.py  model.py  simulator.py  trainer.py
src/autoshield/observability/: alerts.py  auditor.py  explainer.py  metrics.py
src/autoshield/policy/: default.yaml  engine.py
src/autoshield/utils/: logging.py
src/scripts/: build-and-deploy.sh  deploy-dashboard.sh  deploy-inference.sh  deploy-policy-engine.sh  evaluate_model.py  generate_training_data.py  install-cilium.sh  optimize_model.py  run_test_dataset.py  setup-cluster.sh  train_model.py  verify-flows.py
tests/: conftest.py  test_dataset.py  test_end_to_end.py  test_integration.py
(+22 files in other folders)
